<resources>

    <!--Written by Kanayo-->
    <!--User Visible Titles-->
    <string name="app_name">RRsCasino</string>
    <string name="helpTitle">Help Menu</string>
    <string name="helpDescription">What would you like to know about?</string>
    <string name="topics">Topics</string>
    <string name="pokerHelpDescription">Learn the basics of our Poker App</string>
    <string name="bjackHelpDescription">Learn the basics of our Blackjack App</string>
    <string name="Overview">UI Overview</string>
    <string name="HowToWin">How To Win</string>
    <string name="Actions">Actions</string>


    <!--Interior XML Used Titles-->
    <string name="pokerImgButtonDesc">pokerButton</string>
    <string name="bjackImgButtonDesc">bjackButton</string>

    <!--Dialog Text-->
    <string name="bjOverviewDescription">
        To start playing Blackjack, navigate to the main menu, click play, then the
        Blackjack icon. The layout simulates a casino table.
            The cards at the top of the screen are the <b>dealer\'s hand</b>. The cards
            on the bottom is <b>your hand</b>.
            Above each player\'s hands are their current hand\'s <b>score.</b>
            Below the hands there are your <b>action buttons.</b>
        At the bottom is the <b>betting slider</b> and current <b>balance.</b>
    </string>
    <string name="bjActionsDescription">Blackjack allows for 6 different actions.
            <b>Deal</b> will start the game. It will deal two cards to both players.
                One card will be face-up from the dealer\'s hand and both your cards will be
                visible to you.
            <b>Double</b> will double your current bet. It is a double edged sword, almost literally.
                This button is only available when you have 11 or less in your hand.
            <b>Hit</b> informs the dealer to deal one more card to you. Be careful, only <b>Hit</b>
                when safe.
            <b>Stay</b> ends your turn and allows the dealer to deal cards to self-deal.
            <b>Split</b> when you have two of the same value cards in your hand you\'re able to
        <b>split</b>
                your hand in two.
    </string>

    <string name="bjWinningDescription">The goal of the game is to achieve a hand score of 21, or at
        least a score better than the
        dealer. All <b>numerical cards</b> values are equal to their actual worth in-game.
        All <b>face cards</b> are worth 10. The odd card out is the <b>Ace</b>, it has a value of
        both 1 and 11. It\'s value is automatically adjusted during the game. That means if you have
        two face cards in hand and pull an ace, you would have a score of 21, not 31.
        <b>Blackjack</b> is ultimately a game of chance but with a bit of luck on your side
        victories will be normal place.
    </string>
    <string name="pOverviewDescription">To start playing <b>Poker</b>, navigate to the main menu, click play, then the
        Poker icon. The layout simulates a casino table.
        The cards on the bottom of the screen are <b>your cards</b>. The cards
        on the left are <b>your opponents cards</b>.
        To the right of the screen you will find our <b>Betting UI </b>.
        In the center of the screen are the <b>community cards</b>.
        Throughout the playing field are <b>action buttons</b>. These action buttons are the
        way you interact with your opponent.
    </string>
    <string name="pActionsDescription">There are 5 main actions within Poker. The first is <b>Deal Cards</b>
        found in the top right of the screen. Pressing this button will start the game, dealing two
        cards to you and the computer. The next button is the <b>Bet/All In</b> button found in the bottom right.
        This button will place your current bet, controlled with the slider to the right of the screen.
        <b>Fold</b> is found to the immediate left of this button. When it is time to call it quits, slam
        this button.<b>Hands</b> is the final button. This will show a cheat sheet of possible hands.
    </string>
    <string name="pWinningDescription">To win Poker is quite simple. Just have a better hand than your
    opponent. In this game the computer will always call, no matter the situation. It is up to you
    to feel for the odds of you winning this and with your current hand and the community cards. 5 of
    your cards will go towards your "submitted" hand. The other two cards will become "kickers". The
    best combination of cards are then compared to the computers best combination of cards. Who ever
        has the highest value hand wins! <b>Good Luck!</b></string>
</resources>