<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context=".bjackHelp">
  <LinearLayout
      android:id="@+id/text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:id="@+id/Overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/topics"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bjackHelpDescription"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="fill_parent"
      android:layout_below="@id/text"
      android:padding="20dp"
      android:orientation="vertical"
      android:gravity="center"
      android:weightSum="15">
    <Button
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Overview"
        android:layout_weight="3"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Actions"
        android:layout_weight="3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/howtowin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HowToWin"
        android:layout_weight="3"
        android:layout_marginTop="10dp"/>

  </LinearLayout>


</RelativeLayout>